# NTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
NTracer/: CMakeLists.txt  main.cpp
NTracer/NT_3DObjects/: nt3dobject.cpp  nt3dobject.h  nt3dobjectplane.cpp  nt3dobjectplane.h  nt3dobjectsphere.cpp  nt3dobjectsphere.h
NTracer/NT_Base/: ntcamera.cpp  ntcamera.h  ntcolor.cpp  ntcolor.h  ntintersection.cpp  ntintersection.h  ntmaterial.cpp  ntmaterial.h  ntray.cpp  ntray.h  ntrenderer.cpp  ntrenderer.h  ntscene.cpp  ntscene.h
NTracer/NT_Light/: ntlight.cpp  ntlight.h  ntlightomni.cpp  ntlightomni.h
