cmake_minimum_required(VERSION 3.14)

project(NTracer LANGUAGES CXX)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build/out/${CMAKE_BUILD_TYPE}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/out/${CMAKE_BUILD_TYPE}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/out/${CMAKE_BUILD_TYPE}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/out/${CMAKE_BUILD_TYPE}/bin)

add_subdirectory(NCore)
add_subdirectory(NTracer)
